--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "discord.js": "^13.6.0",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.2",
     "wio.db": "^4.0.22"
   }
 }
